--- a/frontend/src/app/pages/data-model-mapper/dmm.component.scss
+++ b/frontend/src/app/pages/data-model-mapper/dmm.component.scss
@@ -32,3 +32,7 @@ code {
   color: #333;
   white-space: pre-wrap; /* Per gestire i ritorni a capo */
 }
+
+#selectSource {
+  width:500px//fit-content
+}
