--- a/frontend/src/app/pages/data-model-mapper/create-map/create-map.component.html
+++ b/frontend/src/app/pages/data-model-mapper/create-map/create-map.component.html
@@ -17,8 +17,10 @@
       <form>
         <label for="name" fullWidth>{{ 'general.mapperRecords.name' | translate }}</label>
         <br>
-        <input [(ngModel)]="name" nbInput type="text" fullWidth placeholder="{{ 'general.mapperRecords.name' | translate }}"
-          [ngModelOptions]="{standalone: true}" />
+        <input *ngIf="save" [(ngModel)]="name" nbInput type="text" fullWidth
+          placeholder="{{ 'general.mapperRecords.name' | translate }}" [ngModelOptions]="{standalone: true}" />
+        <input *ngIf="!save" [(ngModel)]="name" nbInput type="text" fullWidth
+          placeholder="{{ 'general.mapperRecords.name' | translate }}" [ngModelOptions]="{standalone: true}" disabled="true"/>
         <br>
         <br>
         <label for="description" fullWidth>{{ 'general.mapperRecords.description' | translate }}</label>
@@ -36,18 +38,20 @@
         </nb-select>
         <br>
         <br>
-        <nb-checkbox *ngIf="unsaved.schema" [(ngModel)]="saveSchema" [ngModelOptions]="{standalone: true}">{{ schemaSaved ?
+        <nb-checkbox *ngIf="unsaved.schema" [(ngModel)]="saveSchema" [ngModelOptions]="{standalone: true}">{{
+          schemaSaved ?
           ('general.dmm.update_schema' | translate) : ('general.dmm.save_schema' | translate) }} </nb-checkbox>
         <br>
         <br>
-        <nb-checkbox *ngIf="unsaved.source" [(ngModel)]="saveSource" [ngModelOptions]="{standalone: true}">{{ sourceSaved?
+        <nb-checkbox *ngIf="unsaved.source" [(ngModel)]="saveSource" [ngModelOptions]="{standalone: true}">{{
+          sourceSaved?
           ('general.dmm.update_source' | translate) : ('general.dmm.save_source' | translate) }} </nb-checkbox>
         <br>
         <br>
         <h3>
           <br>
-          <button *ngIf="!name" disabled nbButton appearance="outline" shape="semi-round" size="medium"
-            status="info" (click)="confirm()">
+          <button *ngIf="!name" disabled nbButton appearance="outline" shape="semi-round" size="medium" status="info"
+            (click)="confirm()">
             <i class="mx-1">{{ (save) ? ('general.dmm.confirmSave' | translate) : ('general.dmm.confirmEdit' |
               translate) }}</i>
           </button>
